# aoc

./: .gitignore  README.md
2022/day01/: main.hs
2022/day02/: main.hs
2022/day03/: main.hs
2022/day04/: main.hs
2022/day05/: main.hs
2022/day06/: main.hs
2022/day07/: main.hs
2022/day08/: main.hs
2022/day09/: main.hs
2022/day10/: main.hs
2022/day11/: main.hs
2022/day12/: main.hs
2023/day01/: main.d
2023/day02/: main.d  main_hard_functional.d
2023/day03/: main.d
2023/day04/: main.d
2023/day05/: main.d
2023/day06/: main.d
2023/day07/: main.d
2023/day08/: main.d
2023/day09/: main.d
2023/day10/: main.d
2023/day11/: main.d
2023/day12/: main.d
2023/day13/: main.d
2023/day14/: main.d
2023/day15/: main.d
2023/day16/: main.d
2023/day17/: main.d  main.hs
2023/day17hs/src/: main.hs
2023/day19/: main.d
2024/: Main.hs
2024/01/: Main.hs
2024/02/: Main.hs
2024/03/: Main.hs  day03.cabal
2024/03/src/: Main.hs
2024/04/: proj.cabal
2024/04/src/: Main.hs
2024/05/: proj.cabal
2024/05/src/: Main.hs
2024/06/src/: Main.hs
2024/07/: proj.cabal
2024/07/src/: Main.hs
2024/08/: proj.cabal
2024/08/src/: Main.hs
2024/09/src/: Main.hs
2024/10/: Main.hs
2024/12/: proj.cabal
2024/12/src/: Main.hs
2024/13/src/: Main.hs
2024/14/src/: Main.hs
2024/template/src/: Main.hs
2025/01/src/: Main.hs
2025/06/: aoc.cabal
2025/07/: aoc.cabal
2025/08/: aoc.cabal
2025/10/: aoc.cabal
2025/11/: aoc.cabal
2025/11/app/: Main.hs
2025/template/: aoc.cabal  stack.yaml
2025/template-old/: LICENSE  proj.cabal
(+11 files in other folders)
